# evo-attn

./: .gitignore  LICENSE  README.md  README_RU.md  __init__.py  evo_causal.py  ops.py  pyproject.toml
tests/: test_api.py  test_core_v6_torch.py  test_v6_triton_forward.py
